feat: 이미지 생성 실패 시 상태 변경